--- a/docs/locale/es/LC_MESSAGES/primer/index.po
+++ b/docs/locale/es/LC_MESSAGES/primer/index.po
@@ -6,6 +6,7 @@
 # Translators:
 # Amy Guy <amy.guy@opendataservices.coop>, 2022
 # Carmen Edery, 2024
+# María Renée Briozzo Mitchell, 2024
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2022-04-05 16:56+0000\n"
-"Last-Translator: Carmen Edery, 2024\n"
+"Last-Translator: María Renée Briozzo Mitchell, 2024\n"
 "Language-Team: Spanish (https://app.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -28,7 +29,7 @@ msgstr "Guía introductoria"
 
 #: ../../primer/index.rst:8 87495a0b09754fa6a69e832dc01d6477
 msgid "What is beneficial ownership?"
-msgstr "¿Qué significa beneficiario real?"
+msgstr "¿Qué significa titularidad del beneficiario real?"
 
 #: ../../primer/index.rst:10 d0c71fab20c64544ad690a74f4c04828
 msgid ""
@@ -38,9 +39,9 @@ msgid ""
 "activities."
 msgstr ""
 "Un beneficiario real es una persona física que posee intereses, directa o "
-"indirectamente, que les brindan el derecho a una parte de los ingresos o "
-"activos de un vehículo societario o la capacidad de controlar o beneficiarse"
-" de sus actividades."
+"indirectamente, que le brindan el derecho a una parte de los ingresos o "
+"activos de un vehículo societario, o la capacidad de controlar o "
+"beneficiarse de sus actividades."
 
 #: ../../primer/index.rst:12 6148bb7a872b49dd93f8dbc2ecc47185
 msgid ""
@@ -50,10 +51,10 @@ msgid ""
 "'entities' is used to refer to all types of corporate vehicle."
 msgstr ""
 "`Open Ownership <https://www.openownership.org/>`_ usa el término "
-"\"vehículos societarios\" para hacer referencia a ambas entidades legales, "
-"como empresas, y estructuras jurídicas, como fideicomisos. En el Estándar de"
-" datos sobre titularidad de beneficiarios reales, 'entities' se usa para "
-"hacer referencia a todo tipo de vehículo societario."
+"\"vehículos societarios\" para referirse a entidades legales, como empresas,"
+" y estructuras jurídicas, como fideicomisos. En el Estándar de datos sobre "
+"titularidad del beneficiario real, 'entidades' se usa para hacer referencia "
+"a todo tipo de vehículo societario."
 
 #: ../../primer/index.rst:14 57877cee28594f108fa31c3ef8bc9eb5
 msgid ""
@@ -63,9 +64,9 @@ msgid ""
 "relationship with it."
 msgstr ""
 "A menudo, las entidades poseen a otras entidades, pero las personas casi "
-"siempre aparecen al final de las redes de titularidad de beneficiarios "
-"reales. Son las que se benefician en última instancia de los éxitos "
-"financieros de la entidad, debido a su relación con ella."
+"siempre aparecen al final de las redes de titularidad del beneficiario real."
+" Son las que se benefician en última instancia de los éxitos financieros de "
+"la entidad, debido a su relación con ella."
 
 #: ../../primer/index.rst:16 930b088e3305425683ed9cb64460ec4b
 msgid ""
@@ -77,13 +78,13 @@ msgid ""
 "financing a new political party, and law enforcement can’t fight money "
 "laundering and other cross-border financial crimes."
 msgstr ""
-"Las redes de titularidad de beneficiarios reales conectadas a las entidades "
+"Las redes de titularidad del beneficiario real conectadas a las entidades "
 "pueden ser complejas y opacas. Esto significa que la identidad de las "
 "personas que posen, controlan o se benefician de las entidades puede "
 "permanecer oculta. Si los beneficiarios reales están ocultos, los gobiernos "
-"no sabrán quién licita para un contrato, las empresas no sabrán con quién "
-"están haciendo negocios, la sociedad no sabrá quién está financiando a un "
-"nuevo partido político, y las fuerzas policiales no podrán luchar contra el "
+"no saben quién licita para un contrato, las empresas no saben con quién "
+"están haciendo negocios, la sociedad no sabe quién está financiando a un "
+"nuevo partido político, y las fuerzas policiales no pueden luchar contra el "
 "lavado de dinero y otros crímenes financieros transfronterizos."
 
 #: ../../primer/index.rst-1 c3b77235c13740c893eaa83811dfcbc2
@@ -98,26 +99,27 @@ msgid ""
 "dotted line. Person 1 is labelled 'Beneficial owner'. Company A is labelled "
 "'Intermediary entity'."
 msgstr ""
-"Diagrama etiquetado de una red de titularidad de beneficiarios reales. La "
-"empresa E está etiquetada como 'Subject of beneficial ownership network'. "
-"Una línea continua conectada a la persona 2 está etiquetada como 'Direct "
-"relationship'. El texto '32% shareholding' ubicado sobre esa línea continua "
-"está etiquetado como 'Interest'. La empresa E también está vinculada a la "
-"empresa A con una línea continua. Y la empresa A está vinculada a la persona"
-" 1 con una línea continua. Una línea punteada que conecta a la empresa E con"
-" la persona 1 está etiquetada como 'Indirect relationship'. El texto '45% "
-"shareholding' está ubicado sobre esa línea punteada. La persona 1 está "
-"etiquetada como 'Beneficial owner'. La empresa A está etiquetada como "
-"'Intermediary entity'."
+"Diagrama etiquetado de una red de titularidad del beneficiario real. La "
+"Empresa E está etiquetada como 'Sujeto de la red de titularidad del "
+"beneficiario real'. Una línea continua conectada a la Persona 2 está "
+"etiquetada como 'Relación directa'. El texto '32% de participación "
+"accionaria' ubicado sobre esa línea continua está etiquetado como 'Interés'."
+" La Empresa E también está vinculada a la Empresa A con una línea continua. "
+"Y la Empresa A está vinculada a la Persona 1 con una línea continua. Una "
+"línea punteada que conecta a la Empresa E con la Persona 1 está etiquetada "
+"como 'Relación indirecta'. El texto '45% de participación accionaria' está "
+"ubicado sobre esa línea punteada. La Persona 1 está etiquetada como "
+"'Beneficiario real'. La Empresa A está etiquetada como 'Entidad "
+"intermediaria'."
 
 #: ../../primer/index.rst:23 ebc684a01c7f4255b3f758b37ac86ec9
 msgid ""
 "Beneficial ownership can include all types of relationship with an entity "
 "such as ownership, control or benefitting from the entity’s activities."
 msgstr ""
-"La titularidad de beneficiarios reales puede incluir todo tipo de relación "
-"con una entidad, como titularidad, control o beneficio de las actividades de"
-" la entidad."
+"La titularidad del beneficiario real puede incluir todo tipo de relación con"
+" una entidad, como titularidad, control o beneficio de las actividades de la"
+" entidad."
 
 #: ../../primer/index.rst:25 616ee4d241474d14bde83c2cd3628700
 msgid ""
@@ -133,15 +135,15 @@ msgid ""
 msgstr ""
 "Si una persona posee algo, normalmente tiene cierto control sobre eso. "
 "Poseer acciones en una empresa puede conferir derechos de voto, por ejemplo."
-" Pero en ocasiones la titularidad y el control están separados (por clases "
-"de acciones, contratos, acuerdos u otros mecanismos). Por ejemplo, un "
+" Pero, en ocasiones, la titularidad y el control están separados (por clases"
+" de acciones, contratos, acuerdos u otros mecanismos). Por ejemplo, un "
 "director ejecutivo puede tener derecho a designar el 60% de los demás "
 "miembros del órgano de administración, mientras tiene una pequeña "
 "participación en la empresa. Además, existen situaciones en las que es "
 "posible que una persona no tenga titularidad o control significativo, pero "
 "tiene una relación, lo que significa que se beneficia de las actividades de "
-"una entidad; por ejemplo, cuando pueden disfrutar de los activos propiedad "
-"de la entidad y usarlos."
+"una entidad (por ejemplo, cuando puede gozar de los activos propiedad de la "
+"entidad y usarlos."
 
 #: ../../primer/index.rst:27 2c1fc5e43a3c4935ba18ab31508654c6
 msgid ""
@@ -151,15 +153,15 @@ msgid ""
 "<https://www.openownership.org/en/research/>`_, visit `the Open Ownership "
 "website. <https://www.openownership.org/en/>`_"
 msgstr ""
-"Para obtener más `información sobre la transparencia de la titularidad de "
-"beneficiarios reales <https://www.openownership.org/en/about/what-is-"
-"beneficial-ownership-transparency/>`_ y para leer `la última investigación "
+"Para obtener más `información sobre la transparencia de beneficiarios reales"
+" <https://www.openownership.org/en/about/what-is-beneficial-ownership-"
+"transparency/>`_ y para leer `la última investigación "
 "<https://www.openownership.org/en/research/>`_, visite `el sitio web de Open"
 " Ownership. <https://www.openownership.org/en/>`_"
 
 #: ../../primer/index.rst:32 a522fdedb45845548778194bb6321513
 msgid "What is the Beneficial Ownership Data Standard?"
-msgstr "¿Qué es el Estándar de datos sobre beneficiarios reales?"
+msgstr "¿Qué es el Estándar de datos sobre titularidad del beneficiario real?"
 
 #: ../../primer/index.rst:34 6e83ae7e3a1847e78b332d34ab93d4eb
 msgid ""
@@ -168,11 +170,11 @@ msgid ""
 " ownership information. This is based on the :any:`key concepts <key-"
 "concepts>` which underpin beneficial ownership."
 msgstr ""
-"El Estándar de datos sobre beneficiarios reales (BODS, en inglés) ofrece un "
-"formato de datos estructurado y requisitos relacionados para representar y "
-"publicar información de titularidad de beneficiarios reales. Esto se basa en"
-" los :any:`key concepts <key-concepts>` que respaldan la titularidad de "
-"beneficiarios reales."
+"El Estándar de datos sobre titularidad del beneficiario real (BODS) ofrece "
+"un formato de datos estructurados y requisitos relacionados para representar"
+" y publicar información sobre la propiedad efectiva. Esto se basa en los "
+":any:`conceptos clave <key-concepts>` que respaldan la titularidad del "
+"beneficiario real."
 
 #: ../../primer/index.rst:37 a7b7e68d34e5432f8249321d3c2327c9
 msgid "Within BODS:"
@@ -184,9 +186,9 @@ msgid ""
 "shared. It can also inform the design of data collection and management "
 "systems. A format called JSON can be used to publish BODS data."
 msgstr ""
-"en el :any:`data schema <schema-reference>` se describe qué datos deben "
-"compartirse. También puede servir de base para el diseño de los sistemas de "
-"recopilación y gestión de datos. Puede usarse un formato llamado JSON para "
+"en el :any:`esquema de datos <schema-reference>` se describe qué datos deben"
+" compartirse. También puede servir de base para el diseño de los sistemas de"
+" recopilación y gestión de datos. Puede usarse un formato llamado JSON para "
 "publicar datos del BODS."
 
 #: ../../primer/index.rst:40 df4b6cefa25243369e90c9e25047ae6b
@@ -195,9 +197,9 @@ msgid ""
 "information should be represented and managed to conform with the data "
 "standard."
 msgstr ""
-"en las :any:`requirements sections <data-standard-index>` se establece cómo "
-"debe representarse y gestionarse la información para guardar conformidad con"
-" el estándar de datos."
+"en las :any:`secciones de requisitos <data-standard-index>` se establece "
+"cómo debe representarse y gestionarse la información para guardar "
+"conformidad con el estándar de datos."
 
 #: ../../primer/index.rst:42 04954b3cee6145ebb0157288256a42b7
 msgid ""
@@ -206,24 +208,23 @@ msgid ""
 "and-interoperable-beneficial-ownership-data/benefits-of-structured-and-"
 "interoperable-data/>`_:"
 msgstr ""
-"Recopilar, compartir y usar la información de titularidad de beneficiarios "
-"reales como `datos estructurados "
+"Recopilar, compartir y usar la información sobre la propiedad efectiva como "
+"`datos estructurados "
 "<https://www.openownership.org/en/publications/structured-and-interoperable-"
 "beneficial-ownership-data/benefits-of-structured-and-interoperable-data/>`_:"
 
 #: ../../primer/index.rst:44 9fec528bcc7d4f4980fa4127e6d0a2a1
 msgid "improves the interoperability of beneficial ownership information"
 msgstr ""
-"Mejora la interoperabilidad de la información de titularidad de "
-"beneficiarios reales"
+"mejora la interoperabilidad de la información sobre la propiedad efectiva"
 
 #: ../../primer/index.rst:45 111e06b9ddf34970a75fa8a4ce40c5ce
 msgid ""
 "reduces the cost of producing, using, and maintaining beneficial ownership "
 "information"
 msgstr ""
-"reduce el costo de producir, usar y conservar la información de titularidad "
-"de beneficiarios reales"
+"reduce el costo de producir, usar y conservar la información sobre la "
+"propiedad efectiva"
 
 #: ../../primer/index.rst:46 45f1c737d57542f3baa5dfb46b66c203
 msgid ""
@@ -241,7 +242,7 @@ msgid ""
 msgstr ""
 "Sin los estándares comunes, combinar y analizar datos de diferentes fuentes "
 "puede ser costoso y consumir mucho tiempo, lo que dificulta la comprensión "
-"de las redes de titularidad de beneficiarios reales."
+"de las redes de titularidad del beneficiario real."
 
 #: ../../primer/index.rst:50 0e60da8eb47541de90e0bf0333a914cf
 msgid "BODS allows publishers to provide statements that describe:"
@@ -270,4 +271,4 @@ msgstr "información histórica y actual"
 
 #: ../../primer/index.rst:57 36ce93dfa61345bfad832b20ca27a6da
 msgid "placeholders, when information must be witheld"
-msgstr "marcadores de posición, cuando la información debe retenerse"
+msgstr "marcadores de posición, cuando hay información que debe retenerse"
