--- a/docs/locale/es/LC_MESSAGES/standard/modelling/record-ids.po
+++ b/docs/locale/es/LC_MESSAGES/standard/modelling/record-ids.po
@@ -5,6 +5,8 @@
 # 
 # Translators:
 # Carmen Edery, 2024
+# María Renée Briozzo Mitchell, 2024
+# Rachel Vint, 2024
 # 
 #, fuzzy
 msgid ""
@@ -13,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
-"Last-Translator: Carmen Edery, 2024\n"
+"Last-Translator: Rachel Vint, 2024\n"
 "Language-Team: Spanish (https://app.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -31,17 +33,17 @@ msgid ""
 "management system MUST maintain record identifiers for each element (person,"
 " entity and relationship) in each beneficial ownership network."
 msgstr ""
-"Para publicar datos de titularidad de beneficiarios reales en formato de "
+"Para publicar datos de titularidad del beneficiario real en el formato del "
 "BODS, un sistema de gestión de información DEBE conservar los "
-"identificadores de registros para cada elemento (persona, entidad y "
-"relación) en cada red de titularidad de beneficiarios reales."
+"identificadores de registro para cada elemento (persona, entidad y relación)"
+" en cada red de titularidad del beneficiario real."
 
 #: ../../standard/modelling/record-ids.rst:9 07130b16098049318df42233911b5ef3
 msgid ""
 "Record identifiers MUST be unique within the publisher's system and never "
 "reused to refer to a different element."
 msgstr ""
-"Los identificadores de registros DEBEN ser únicos dentro del sistema del "
+"Los identificadores de registro DEBEN ser únicos dentro del sistema del "
 "publicador y nunca deben reutilizarse para hacer referencia a un elemento "
 "diferente."
 
@@ -56,13 +58,13 @@ msgid ""
 "have its own record identifier. (See the example below.)"
 msgstr ""
 "Hay situaciones en las que el sistema de un publicador puede permitir "
-"recopilar información sobre la misma persona, entidad o relación en relación"
-" con las redes de titularidad de beneficiarios reales de varios sujetos "
-"diferentes. En estos casos, puede existir información de diferentes sujetos "
-"de declaración sobre la misma persona, entidad o relación lado a lado y debe"
-" ser representada en los datos publicados. En estos casos, cada conjunto de "
-"información DEBE tener su propio identificador de registro (Consulte el "
-"siguiente ejemplo)."
+"recopilar información sobre la misma persona, entidad o relación sobre las "
+"redes de titularidad del beneficiario real de varios sujetos diferentes. En "
+"estos casos, puede existir información de diferentes sujetos de declaración "
+"sobre la misma persona, entidad o relación lado a lado y debe ser "
+"representada en los datos publicados. En estos casos, cada conjunto de "
+"información DEBE tener su propio identificador de registro. (Consulte el "
+"ejemplo que aparece más abajo)."
 
 #: ../../standard/modelling/record-ids.rst:13 0ca97a1236834be7a8471c6758cbbeae
 msgid ""
@@ -74,9 +76,9 @@ msgid ""
 msgstr ""
 "El valor de un identificador de registro de entidad o persona PUEDE ser una "
 "función de: la identidad de la entidad o persona física, además de la "
-"identidad del sujeto de la red de titularidad de beneficiarios reales donde "
-"la entidad o persona aparece. Consulte :ref:`guidance-identifiers` para "
-"obtener orientación sobre cómo representar la identidad de entidades o "
+"identidad del sujeto de la red de titularidad del beneficiario real donde la"
+" entidad o persona aparece. Consulte :ref:`guidance-identifiers` para "
+"obtener orientación sobre cómo representar la identidad de entidades y "
 "personas físicas."
 
 #: ../../standard/modelling/record-ids.rst:15 74f5b7449539407dac229061af80f914
@@ -91,7 +93,7 @@ msgstr ""
 "sujeto y de la parte interesada. Por lo tanto, el valor de un identificador "
 "de registro de relación PUEDE ser una función de: los identificadores de "
 "registro de su sujeto y de la parte interesada, además de la identidad del "
-"sujeto de la red titularidad de beneficiarios reales en la que aparece la "
+"sujeto de la red de titularidad del beneficiario real en la que aparece la "
 "relación."
 
 #: ../../standard/modelling/record-ids.rst:17 b546dabee4ac4c848bd9b06354f01510
@@ -104,7 +106,7 @@ msgstr ""
 
 #: ../../standard/modelling/record-ids.rst:20 07b28aa5ca7648659388c194158978e4
 msgid "Example scenario"
-msgstr "Ejemplo de caso"
+msgstr "Escenario de ejemplo"
 
 #: ../../standard/modelling/record-ids.rst:22 2e2208b6661e449d8c4b6d8c132b6b78
 msgid ""
@@ -113,16 +115,16 @@ msgid ""
 "direct interests in the company."
 msgstr ""
 "Las empresas privadas en una jurisdicción tienen la obligación de divulgar "
-"ante la autoridad de inscripción de la empresa: sus titulares legales y "
-"cualquier titular de beneficiario real con intereses directos en la empresa."
+"ante la autoridad de inscripción de la empresa sus titulares legales y "
+"cualquier beneficiario real con intereses directos en la empresa."
 
 #: ../../standard/modelling/record-ids.rst:24 a4c85c3f753d44ae94ad76979e16773e
 msgid ""
 "Alpha Corp. discloses one natural person as a beneficial owner (and legal "
 "owner) and it also discloses Beta Systems as a legal owner."
 msgstr ""
-"Alpha Corp. divulga a una persona como beneficiario real  (y titular legal) "
-"y también divulga a Beta Systems como titular legal."
+"Alpha Corp. divulga a una persona física como beneficiario real (y titular "
+"legal) y también divulga a Beta Systems como titular legal."
 
 #: ../../standard/modelling/record-ids.rst-1 56ab238866964620b1f7b1f9036635f7
 msgid ""
@@ -134,15 +136,15 @@ msgid ""
 " next to Beta Systems's node. Within the entity statement, recordId is "
 "'09d3a4fb'."
 msgstr ""
-"Diagrama de una red de titularidad de beneficiarios reales. Un nodo de "
-"entidad para la empresa Alpha Corp está conectado a través de una línea "
-"continua con el nodo de una persona. El nodo de Alpha Corp también está "
-"conectado a través de una línea continua con un nodo de entidad para la "
-"empresa Beta Systems. Un bloque de declaración sobre entidad está ubicado "
-"junto al nodo de Alpha Corp. Dentro de la declaración sobre entidad, "
-"recordId es '04a221be'. Un bloque de declaración sobre entidad se ubica "
-"junto al nodo de Beta Systems. Dentro de la declaración sobre entidad, "
-"recordId es '09d3a4fb'."
+"Diagrama de una red de titularidad del beneficiario real. Un nodo de entidad"
+" para la empresa Alpha Corp está conectado a través de una línea continua "
+"con un nodo de persona. El nodo de Alpha Corp también está conectado a "
+"través de una línea continua con un nodo de entidad para la empresa Beta "
+"Systems. Un bloque de declaración sobre entidad está ubicado junto al nodo "
+"de Alpha Corp. Dentro de la declaración sobre entidad, el recordId es "
+"'04a221be'. Un bloque de declaración sobre entidad se ubica junto al nodo de"
+" Beta Systems. Dentro de la declaración sobre entidad, el recordId es "
+"'09d3a4fb'."
 
 #: ../../standard/modelling/record-ids.rst:31 c897cd3dd68a4709850eb932e959971b
 msgid "Beta Systems declares that it has four direct beneficial owners."
@@ -155,10 +157,10 @@ msgid ""
 "statement block sits next to the Beta Sys node. Within the entity statement,"
 " recordId is '02c83aa2'."
 msgstr ""
-"Diagrama de una red de titularidad de beneficiarios reales. Un nodo de "
-"entidad para la empresa Beta Sys está conectado a través de líneas continuas"
-" con cuatro nodos de personas. Un bloque de declaración sobre entidad está "
-"ubicado junto al nodo Beta Sys. Dentro de la declaración de entidad, "
+"Diagrama de una red de titularidad del beneficiario real. Un nodo de entidad"
+" para la empresa Beta Sys está conectado a través de líneas continuas con "
+"cuatro nodos de personas. Un bloque de declaración sobre entidad está "
+"ubicado junto al nodo Beta Sys. Dentro de la declaración sobre entidad, el "
 "recordId es '02c83aa2'."
 
 #: ../../standard/modelling/record-ids.rst:38 1830b2861fc748169e7873e2069309ed
