--- a/docs/locale/es/LC_MESSAGES/about/governance.po
+++ b/docs/locale/es/LC_MESSAGES/about/governance.po
@@ -6,6 +6,7 @@
 # Translators:
 # Agustina De Luca, 2022
 # Carmen Edery, 2024
+# María Renée Briozzo Mitchell, 2024
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2022-04-05 16:56+0000\n"
-"Last-Translator: Carmen Edery, 2024\n"
+"Last-Translator: María Renée Briozzo Mitchell, 2024\n"
 "Language-Team: Spanish (https://app.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -33,10 +34,10 @@ msgid ""
 "focused on beneficial ownership transparency, in partnership with `Open Data"
 " Services <https://opendataservices.coop/>`_."
 msgstr ""
-"El Estándar de datos de titularidad de beneficiarios reales (BODS, en "
-"inglés) es elaborado por `Open Ownership <https://www.openownership.org/>`_,"
-" una organización sin fines de lucro enfocada en la transparencia de la "
-"titularidad de beneficiarios reales, en asociación con `Open Data Services "
+"El Estándar de datos sobre titularidad del beneficiario real (BODS) es "
+"elaborado por `Open Ownership <https://www.openownership.org/>`_, una "
+"organización sin fines de lucro enfocada en la transparencia de "
+"beneficiarios reales, en asociación con `Open Data Services "
 "<https://opendataservices.coop/>`_."
 
 #: ../../about/governance.rst:6 979298d168ea43c484409e58475e6c50
@@ -45,8 +46,7 @@ msgid ""
 "sharing and using beneficial ownership data."
 msgstr ""
 "La elaboración del BODS responde a las necesidades en evolución de aquellos "
-"que recopilan, comparten y usan datos de titularidad de beneficiarios "
-"reales."
+"que recopilan, comparten y usan datos de titularidad del beneficiario real."
 
 #: ../../about/governance.rst:8 34142492ba924560b029eb0470a43cb3
 msgid ""
@@ -54,10 +54,10 @@ msgid ""
 "governed and developed will be updated by Open Ownership and Open Data "
 "Services in consultation with the Data Standard Working Group."
 msgstr ""
-"Mientras el trabajo continúa para desarrollar una versión 1.0, los procesos "
-"por los que el BODS está regido y es elaborado serán actualizados por Open "
-"Ownership y Open Data Services en consulta con el Grupo de Trabajo de "
-"Estándares de Datos."
+"Mientras continúa el trabajo para desarrollar una versión 1.0, los procesos "
+"por los que el BODS está regido y desarrollado serán actualizados por Open "
+"Ownership y Open Data Services en consulta con el Grupo de trabajo sobre "
+"estándares de datos."
 
 #: ../../about/governance.rst:10 6a1cb71b6a2543a0a283d7d1c1c2d4f5
 msgid ""
@@ -79,9 +79,9 @@ msgid ""
 "<https://github.com/openownership/data-standard/>`_."
 msgstr ""
 "Para sugerir cambios o soluciones, envíe una solicitud de función o informe "
-"de errores de BODS a través de las `plantillas de problemas "
+"de errores del BODS a través de las `plantillas de incidencias "
 "<https://github.com/openownership/data-standard/issues/new/choose>`_ "
-"disponibles en el `depósito GitHub de BODS "
+"disponibles en el `depósito GitHub del BODS "
 "<https://github.com/openownership/data-standard/>`_."
 
 #: ../../about/governance.rst:18 15fad8b94f66450c86853df00a364357
@@ -90,8 +90,8 @@ msgid ""
 "requests or bug reports via comments on the Github issue."
 msgstr ""
 "Open Ownership y Open Data Services responderán a todas las solicitudes de "
-"función o informes de errores a través de comentarios sobre el problema "
-"Github."
+"función o informes de errores a través de comentarios sobre la incidencia de"
+" Github."
 
 #: ../../about/governance.rst:21 353be43ce2374a69a563956467d062fd
 msgid "Feature development"
@@ -103,7 +103,7 @@ msgid ""
 "submitted feature, Open Ownership and Open Data Services use feature "
 "development tickets."
 msgstr ""
-"Para disponer una función propuesta para desarrollo o expandir una función "
+"Para exponer una función propuesta para desarrollo o expandir una función "
 "enviada por la comunidad, Open Ownership y Open Data Services usan tickets "
 "de desarrollo de funciones."
 
@@ -117,12 +117,12 @@ msgid ""
 "researched or worked on, it will be moved to the Research stage."
 msgstr ""
 "Los tickets de desarrollo de funciones son declaraciones de problemas: se "
-"enfocan en las brechas de necesidad del usuario en BODS que posiblemente "
+"enfocan en las brechas de necesidad del usuario en el BODS que posiblemente "
 "deban cubrirse. Los actuales tickets de desarrollo de funciones abiertos "
-"figuran en el `rastreador de funciones de BODS "
-"<https://github.com/openownership/data-standard/projects/4>`_ y los nuevos "
-"se agregarán primero a la lista de atrasos. Una vez que se investiga sobre "
-"un ticket o se trabaja activamente en él, pasará a la etapa de "
+"figuran en el `rastreador de funciones del BODS "
+"<https://github.com/openownership/data-standard/projects/4>`_, y los nuevos "
+"se agregarán primero a la lista de atrasos. Una vez que se haya investigado "
+"activamente sobre un ticket o se haya trabajado en él, pasará a la etapa de "
 "Investigación."
 
 #: ../../about/governance.rst:27 3f5104561b9c4f6db80bac4086181af5
@@ -134,7 +134,7 @@ msgid ""
 "<https://github.com/openownership/data-"
 "standard/discussions/categories/feature-implementation>`_."
 msgstr ""
-"Una vez que las necesidades del usuario de una nueva función en BODS se "
+"Una vez que las necesidades del usuario de una nueva función en el BODS se "
 "hayan descrito en un ticket de desarrollo de funciones, pueden hacerse "
 "propuestas sobre cómo implementar la función.  Actualmente, Open Ownership y"
 " Open Data Services usan las conversaciones GitHub para recibir comentarios "
@@ -147,13 +147,13 @@ msgid ""
 "If broad consensus about whether or not to proceed with implementation as "
 "laid out in the proposal can't be reached, the decision should be postponed."
 msgstr ""
-"Si no se puede llegar a un consenso amplio sobre si proceder con la "
-"implementación o no tal como se dispuso en la propuesta, la decisión debe "
+"Si no se puede llegar a un consenso amplio sobre si proceder o no con la "
+"implementación tal como se expuso en la propuesta, la decisión debe "
 "posponerse."
 
 #: ../../about/governance.rst:32 6e9323319e2f416d8cc5025fdb315a3f
 msgid "Release tracking"
-msgstr "Rastreo de autorizaciones"
+msgstr "Rastreo de ediciones"
 
 #: ../../about/governance.rst:34 851f4fe161d64cbe8792e61262381b6d
 msgid ""
@@ -165,18 +165,18 @@ msgid ""
 "`release tracker for BODS version 0.4 "
 "<https://github.com/orgs/openownership/projects/4/views/1>`_."
 msgstr ""
-"Por cada nueva versión de BODS, Open Ownership y Open Data Services crearán "
-"un rastreador de autorizacioines como `proyecto "
+"Por cada nueva versión del BODS, Open Ownership y Open Data Services crearán"
+" un rastreador de ediciones como `proyecto "
 "<https://github.com/orgs/openownership/projects>`_ del `equipo Open "
-"Ownership GitHub <https://github.com/openownership>`_ para capturar las "
+"Ownership de GitHub <https://github.com/openownership>`_ para capturar las "
 "funciones, los arreglos de errores, los cambios y las actualizaciones que se"
-" realizan en la nueva versión. Este es el `rastreador de autorizaciones para"
-" la versión 0.4 del BODS "
+" realizan en la nueva versión. Este es el `rastreador de ediciones para la "
+"versión 0.4 del BODS "
 "<https://github.com/orgs/openownership/projects/4/views/1>`_."
 
 #: ../../about/governance.rst:39 c799e349b61c41db96eb7ed1d3bec34c
 msgid "Data Standard Working Group"
-msgstr "Grupo de Trabajo sobre Estándares de Datos"
+msgstr "Grupo de trabajo sobre estándares de datos"
 
 #: ../../about/governance.rst:41 e013aedf3ecb442f82a8d2cd78550802
 msgid ""
@@ -184,7 +184,7 @@ msgid ""
 "data experts to help shape the development of BODS as well as driving "
 "adoption of the standard internationally."
 msgstr ""
-"El Grupo de Trabajo sobre Estándares de Datos reúne a expertos nacionales, "
+"El Grupo de trabajo sobre estándares de datos reúne a expertos nacionales, "
 "técnicos y de datos para ayudar a dar forma al desarrollo del BODS e "
 "impulsar la adopción del estándar a nivel internacional."
 
@@ -219,6 +219,6 @@ msgstr ""
 "<https://docs.google.com/document/d/1kNxojFM0BLZvUYlFWfayQ88CG7ffC-"
 "ypjMtrZxDDKmU/edit?usp=sharing>`_. Las reuniones de grupo virtuales se "
 "realizan cada trimestre y la comunicación se coordina a través de un grupo "
-"de Google. Se anima a los miembros a responder a los problemas a través de "
-"`GitHub <https://github.com/openownership/data-standard/issues>`_ o correo "
-"electrónico."
+"de Google. Se anima a los miembros a responder a las incidencias a través de"
+" `GitHub <https://github.com/openownership/data-standard/issues>`_ o por "
+"correo electrónico."
