--- a/docs/locale/es/LC_MESSAGES/about/index.po
+++ b/docs/locale/es/LC_MESSAGES/about/index.po
@@ -8,6 +8,7 @@
 # Agustina De Luca, 2022
 # Simon Whitehouse <simon.whitehouse@opendataservices.coop>, 2022
 # Carmen Edery, 2024
+# María Renée Briozzo Mitchell, 2024
 # 
 #, fuzzy
 msgid ""
@@ -16,7 +17,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2022-04-05 16:56+0000\n"
-"Last-Translator: Carmen Edery, 2024\n"
+"Last-Translator: María Renée Briozzo Mitchell, 2024\n"
 "Language-Team: Spanish (https://app.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -34,8 +35,7 @@ msgid ""
 "Ownership Data Standard (BODS) and support for its use."
 msgstr ""
 "Este sitio web contiene la especificación de la versión 0.4 del Estándar de "
-"datos sobre titularidad de beneficiarios reales (BODS, en inglés) y el "
-"soporte para su uso."
+"datos sobre titularidad del beneficiario real (BODS) y soporte para su uso."
 
 #: ../../about/index.rst:8 d4726f521bcf404697719e63ac2a5167
 msgid ""
@@ -43,8 +43,8 @@ msgid ""
 "machine-readable data on beneficial ownership."
 msgstr ""
 "El BODS es un estándar abierto para recopilar, compartir y usar datos "
-"legibles por máquina de alta calidad sobre la titularidad de beneficiarios "
-"reales."
+"legibles por medios informáticos de alta calidad sobre la titularidad del "
+"beneficiario real."
 
 #: ../../about/index.rst:22 74f69d57e5fc4cec93b4478b8b946206
 msgid "Background"
@@ -60,14 +60,14 @@ msgid ""
 "transparency policy goals such as exposing transnational networks of illicit"
 " financial flows or supporting effective and timely due diligence."
 msgstr ""
-"Recopilar, almacenar y hacer que la información de titularidad de "
-"beneficiarios reales esté disponible como `datos estructurados e "
-"interoperables <https://www.openownership.org/en/principles/structured-"
-"data/>`__ mejora su funcionalidad. Reduce el costo de producir, usar y "
-"mantener la información, y tiene mayores posibilidades de cumplir con las "
-"metas de la política de transparencia de titularidad de beneficiarios "
-"reales, tales como exponer a las redes transnacionales de flujo financiero "
-"ilícito o apoyar la diligencia debida efectiva y oportuna."
+"Recopilar, almacenar y hacer que la información sobre la propiedad efectiva "
+"esté disponible como `datos estructurados e interoperables "
+"<https://www.openownership.org/en/principles/structured-data/>`__ mejora su "
+"funcionalidad. Reduce el costo de producir, usar y mantener la información, "
+"y tiene mayores posibilidades de cumplir con las metas de la política de "
+"transparencia de beneficiarios reales, tales como exponer a las redes "
+"transnacionales de flujo financiero ilícito o apoyar la diligencia debida "
+"efectiva y oportuna."
 
 #: ../../about/index.rst:30 81b051aa177745ed8df2b4f85c595e43
 msgid ""
@@ -75,10 +75,10 @@ msgid ""
 " practical framework for collecting and publishing beneficial ownership "
 "data, resulting in data that is interoperable and high quality."
 msgstr ""
-"El BODS permite la transparencia de titularidad de beneficiarios reales al "
-"ofrecer un marco conceptual y práctico para recopilar y publicar datos de "
-"titularidad de beneficiarios reales, lo que se deriva en datos que son "
-"interoperables y de alta calidad."
+"El BODS permite la transparencia de beneficiarios reales ofreciendo un marco"
+" conceptual y práctico para recopilar y publicar datos de titularidad del "
+"beneficiario real, lo que da como resultado datos interoperables y de alta "
+"calidad."
 
 #: ../../about/index.rst:32 c2f8d84a7f194819859642f9d486ace2
 msgid ""
@@ -97,10 +97,10 @@ msgid ""
 "beneficial ownership specialists and other interested parties also provides "
 "advice and helps guide the development of BODS."
 msgstr ""
-"Un :any:`data standard working group <working-group>` de expertos en datos, "
-"especialistas en titularidad de beneficiarios reales y otras partes "
-"interesadas también brinda asesoría y ayuda a orientar el desarrollo del "
-"BODS."
+"Un :any:`grupo de trabajo sobre estándares de datos <working-group>` de "
+"expertos en datos, especialistas en titularidad del beneficiario real y "
+"otras partes interesadas también brinda asesoría y ayuda a orientar el "
+"desarrollo del BODS."
 
 #: ../../about/index.rst:40 d1212e7b4cad4498a44ffaecda5427d6
 msgid "Current status of the standard"
@@ -112,9 +112,10 @@ msgid ""
 "documented in the :ref:`changelog <changelog>`, and the documentation of "
 "previous versions is maintained in archive form."
 msgstr ""
-"Esta es la v0.4 del Estándar de datos de titularidad de beneficiarios "
-"reales. Los cambios están documentados en el :ref:`changelog <changelog>`, y"
-" la documentación de versiones anteriores se mantiene en forma de archivo."
+"Esta es la v0.4 del Estándar de datos sobre titularidad del beneficiario "
+"real. Los cambios están documentados en el :ref:`registro de modificaciones "
+"<changelog>`, y la documentación de versiones anteriores se mantiene en "
+"forma de archivo."
 
 #: ../../about/index.rst:48 16777f2b89084c8f859d87488d458a89
 msgid ""
@@ -141,8 +142,8 @@ msgstr ""
 "<https://standard.openownership.org/en/latest/schema/index.html>`__ contiene"
 " una estructura, campos y listas de códigos. Si es posible, se incluyen las "
 "limitaciones de validación dentro del esquema JSON. Las limitaciones que no "
-"pueden integrarse en el esquema pueden revisarse usando la herramienta de "
-"revisión de datos. Consulte :ref:`Conformance and validation <conformance>` "
+"pueden integrarse en el esquema pueden verificarse usando la herramienta de "
+"revisión de datos. Consulte :ref:`Conformidad y validación <conformance>` "
 "para obtener más información."
 
 #: ../../about/index.rst:56 a105a121fb29466d9a7e2a9e4207db75
@@ -179,7 +180,7 @@ msgstr ""
 "Cualquiera puede enviar una solicitud de función o informe de errores, "
 "contribuir a los tickets de desarrollo de funciones o presentar propuestas "
 "de implementación. Si desea involucrarse en el desarrollo y la revisión del "
-"estándar, consulte la página :doc:`Governance <governance>`."
+"Estándar, consulte la página :doc:`Gobernanza <governance>`."
 
 #: ../../about/index.rst:73 87911b42591a499987c2c61d39d31569
 msgid "Partners and funders"
@@ -198,7 +199,7 @@ msgid ""
 msgstr ""
 "El desarrollo inicial del BODS fue financiado por Open Ownership como parte "
 "de un proyecto financiado por el `Departamento de Desarrollo Internacional "
-"del Reino Unido (DfID, en inglés) "
+"del Reino Unido (DfID) "
 "<https://www.gov.uk/government/organisations/department-for-international-"
 "development>`__ y su desarrollo sigue siendo financiado por la `Oficina de "
 "Asuntos Extranjeros, Commonwealth y Desarrollo del Reino Unido "
@@ -216,9 +217,10 @@ msgid ""
 msgstr ""
 "`Open Ownership <https://www.openownership.org/en/>`__ es una organización "
 "sin fines de lucro que impulsa el cambio global hacia la transparencia y la "
-"responsabilidad en la titularidad y el control corporativos. Es administrada"
-" por un equipo ejecutivo que es supervisado por un grupo directivo "
-"conformado por organizaciones líderes en transparencia y responsabilidad."
+"rendición de cuentas en la titularidad y el control corporativos. Es "
+"administrada por un equipo ejecutivo que es supervisado por un grupo "
+"directivo conformado por organizaciones líderes en transparencia y rendición"
+" de cuentas."
 
 #: ../../about/index.rst:83 e154220caf4d4b18927ec9df3164272e
 msgid ""
