--- a/docs/locale/es/LC_MESSAGES/examples/index.po
+++ b/docs/locale/es/LC_MESSAGES/examples/index.po
@@ -7,6 +7,7 @@
 # Amy Guy <amy.guy@opendataservices.coop>, 2022
 # Stephen Abbott Pugh <stephen@openownership.org>, 2024
 # Carmen Edery, 2024
+# María Renée Briozzo Mitchell, 2024
 # 
 #, fuzzy
 msgid ""
@@ -15,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2022-04-05 16:56+0000\n"
-"Last-Translator: Carmen Edery, 2024\n"
+"Last-Translator: María Renée Briozzo Mitchell, 2024\n"
 "Language-Team: Spanish (https://app.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -47,7 +48,7 @@ msgid ""
 " Hewitson-Smith."
 msgstr ""
 "Tres declaraciones (entidad, persona y relación) que describen la "
-"titularidad de beneficiarios reales (y la titularidad legal al 100%) de "
+"titularidad del beneficiario real (y la titularidad legal al 100%) de "
 "Profitech Ltd de Jennifer Hewitson-Smith."
 
 #: ../../examples/index.rst:21 c5474214dbd64bacbac298e91314ca3d
@@ -62,22 +63,21 @@ msgid ""
 "exempt from disclosure."
 msgstr ""
 "En este ejemplo, se demuestra cómo se puede representar la titularidad del "
-"beneficiario real de una estructura jurídica similar a un fideicomiso con "
-"BODS. Una fiducia está registrada con información sobre el fideicomitente y "
-"los fideicomisarios divulgados. El beneficiario está extento de "
-"divulgaciones."
+"beneficiario real de una estructura jurídica similar a un fideicomiso con el"
+" BODS. Una fiducie está registrada con información sobre el fideicomitente y"
+" los fiduciarios divulgados. El beneficiario está exento de divulgaciones."
 
 #: ../../examples/index.rst:31 1a6ff90a6d624df39f6ef258501d4ac6
 msgid "An entity statement for a listed company"
-msgstr "Una declaración sobre entidad para una emrpresa cotizada"
+msgstr "Una declaración sobre entidad para una empresa que cotiza en bolsa"
 
 #: ../../examples/index.rst:33 58763970f5fd45d4a66160fe70ff53fc
 msgid ""
 "This statement demonstrates how the details of a listed company can be "
 "published in BODS format."
 msgstr ""
-"En esta declaración, se demuestra cómo los detalles de una empresa cotizada "
-"pueden publicarse en formato BODS."
+"En esta declaración, se demuestra cómo los detalles de una empresa que "
+"cotiza en bolsa pueden publicarse en formato del BODS."
 
 #: ../../examples/index.rst:39 ac9303ea413d47b28daef39c7d4401b4
 msgid "Updating information over time 1"
@@ -91,9 +91,9 @@ msgid ""
 "arrangement itself is not disclosed."
 msgstr ""
 "En este ejemplo, se demuestra una transferencia gradual de la titularidad de"
-" un empresario individual a un fideicomiso propiedad de los empleados. En "
-"este ejemplo, debe divulgarse un beneficiario real si posee al menos 25% de "
-"la empresa. La estructura jurídica del fideicomiso en sí no se divulga."
+" un propietario único a un fideicomiso propiedad de los empleados. En este "
+"ejemplo, debe divulgarse un beneficiario real si posee al menos 25% de la "
+"empresa. La estructura jurídica del fideicomiso en sí no se divulga."
 
 #: ../../examples/index.rst:43 61b8b7333fe641fba9c463c1013cf0c6
 msgid ""
@@ -135,7 +135,7 @@ msgid ""
 "Tecido is registered with Maria Esteves as sole beneficial owner, legal "
 "owner and director."
 msgstr ""
-"Tecido está registrado con Maria Esteves como única beneficiaria real, "
+"Tecido está registrada con Maria Esteves como única beneficiaria real, "
 "propietaria legal y directora."
 
 #: ../../examples/index.rst:57 36ad792dcb8b4017a73c7fdbdde994cb
@@ -150,7 +150,7 @@ msgstr "bo-tjf-7435753839"
 msgid ""
 "60% of shares are transferred to a corporate trustee company, Shear Trust."
 msgstr ""
-"60% de las acciones se transfieren a una empresa fiduciaria, Shear Trust."
+"El 60% de las acciones se transfiere a una empresa fiduciaria, Shear Trust."
 
 #: ../../examples/index.rst:60 2abc49845dcd4c9292e6b37ba6dc720f
 msgid "2022-09-25"
@@ -165,8 +165,8 @@ msgid ""
 "An additional 10% of shares are transferred to the trustee company, which "
 "now holds 70% of the shares."
 msgstr ""
-"Un 10% adicional de las acciones se transfieren a la empresa fiduciaria, que"
-" ahora posee 70% de las acciones."
+"Un 10% adicional de las acciones se transfiere a la empresa fiduciaria, que "
+"ahora posee el 70% de las acciones."
 
 #: ../../examples/index.rst:63 11d6ebf928f1402490169124e0f7634b
 msgid "2023-03-03"
@@ -183,8 +183,9 @@ msgid ""
 "for reporting and is no longer disclosed as a beneficial owner."
 msgstr ""
 "Un 10% adicional de las acciones se transfiere a la empresa fiduciaria, que "
-"ahora posee 80% de las acciones. Ahora el propietario original está por "
-"debajo del umbral de informes y ya no se le divulga como beneficiario real."
+"ahora posee el 80% de las acciones. Ahora el propietario original está por "
+"debajo del umbral de presentación de informes y ya no se lo divulga como "
+"beneficiario real."
 
 #: ../../examples/index.rst:68 5c864f2cee124679b94bbf7abfaab476
 msgid "Updating information over time 2"
@@ -196,8 +197,8 @@ msgid ""
 "beneficial ownership information are represented in BODS."
 msgstr ""
 "En este ejemplo, se demuestra cómo un proceso de confirmación y los cambios "
-"en la información de titularidad de beneficiarios reales están representados"
-" en BODS."
+"en la información sobre la propiedad efectiva están representados en el "
+"BODS."
 
 #: ../../examples/index.rst:72 d528d563dfb647f8bc3e9dd45828ac30
 msgid ""
@@ -216,8 +217,8 @@ msgid ""
 "Fermcat is registered as having two beneficial owners who each own 50% of "
 "the company."
 msgstr ""
-"Fermcat está registrado con dos beneficiarios reales que poseen cada uno 50%"
-" de la empresa."
+"Fermcat está registrada con dos beneficiarios reales que poseen cada uno el "
+"50% de la empresa."
 
 #: ../../examples/index.rst:84 369957c7cfb8478bb0dc24a98d818980
 msgid "2020-09-11"
@@ -229,7 +230,7 @@ msgid ""
 "beneficial ownership."
 msgstr ""
 "El proceso de confirmación anual se ha completado. No ha habido cambios en "
-"la titularidad de beneficiarios reales."
+"la titularidad del beneficiario real."
 
 #: ../../examples/index.rst:86 3c8d9daef5cf4027aa5724bf0a697034
 msgid "2021-09-11"
@@ -270,10 +271,10 @@ msgid ""
 "repository. These examples include representing indirect ownership, use of "
 "annotations, and representing state owned enterprises."
 msgstr ""
-"Hay ejemplos adicionales de archivos JSON de BODS en el depósito de "
+"Hay ejemplos adicionales de archivos JSON del BODS en el repositorio de "
 "estándares. Entre estos ejemplos, se incluyen la representación de la "
-"titularidad indirecta, el uso de anotaciones y la representación de empresas"
-" estatales."
+"titularidad indirecta, el uso de notas y la representación de empresas "
+"estatales."
 
 #: ../../examples/index.rst:96 de00e70daac248dfa5fa312d1f6b6b6a
 msgid ""
