--- a/docs/locale/es/LC_MESSAGES/index.po
+++ b/docs/locale/es/LC_MESSAGES/index.po
@@ -7,6 +7,7 @@
 # Amy Guy <amy.guy@opendataservices.coop>, 2022
 # Agustina De Luca, 2022
 # Carmen Edery, 2024
+# María Renée Briozzo Mitchell, 2024
 # 
 #, fuzzy
 msgid ""
@@ -15,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2022-04-05 16:56+0000\n"
-"Last-Translator: Carmen Edery, 2024\n"
+"Last-Translator: María Renée Briozzo Mitchell, 2024\n"
 "Language-Team: Spanish (https://app.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,7 +26,7 @@ msgstr ""
 
 #: ../../index.rst:2 fc13bceebec2410c8e7da1650e465254
 msgid "Beneficial Ownership Data Standard (v0.4)"
-msgstr "Estándar de datos sobre titularidad de beneficiarios reales (v0.4)"
+msgstr "Estándar de datos sobre titularidad del beneficiario real (v0.4)"
 
 #: ../../index.rst:4 bcdb8d77de3240b5baa001a40c5abd3d
 msgid ""
@@ -33,10 +34,9 @@ msgid ""
 "guidance for collecting, sharing and using high-quality beneficial ownership"
 " data."
 msgstr ""
-"El Estándar de datos sobre titularidad de beneficiarios reales (BODS, en "
-"inglés) es un estándar abierto que ofrece orientación para recopilar, "
-"compartir y usar datos de titularidad de beneficiarios reales de alta "
-"calidad."
+"El Estándar de datos sobre titularidad del beneficiario real (BODS) es un "
+"estándar abierto que ofrece orientación para recopilar, compartir y usar "
+"datos de titularidad del beneficiario real de alta calidad."
 
 #: ../../index.rst:6 be031c1dc1de4bcaa66bffd88cb94668
 msgid ""
@@ -47,10 +47,10 @@ msgid ""
 "how to get involved."
 msgstr ""
 "Es elaborado por `Open Ownership <https://www.openownership.org/>`_, una "
-"organización sin fines de lucro que se enfoca en la transparencia de la "
-"titularidad de beneficiarios reales, en asociación con `Open Data Services "
+"organización sin fines de lucro que se enfoca en la transparencia de "
+"beneficiarios reales, en asociación con `Open Data Services "
 "<https://opendataservices.coop/>`_. Puede encontrar más información sobre la"
-" :doc:`gobernanza de BODS <../about/governance>` y cómo participar."
+" :doc:`gobernanza del BODS <../about/governance>` y cómo participar."
 
 #: ../../index.rst:12 7739934b9f874808beded5af7cecba37
 msgid "Introduction"
@@ -61,12 +61,12 @@ msgid ""
 "Learn about beneficial ownership and why a standardised format for data is "
 "important."
 msgstr ""
-"Conozca más acerca de la titularidad de beneficiarios reales y por qué es "
+"Conozca más acerca de la titularidad del beneficiario real y por qué es "
 "importante un formato estandarizado para los datos."
 
 #: ../../index.rst:18 66a86c7baa804b929aaa415db155db3e
 msgid ":ref:`What is beneficial ownership? <primer>`"
-msgstr ":ref:`¿Qué es la titularidad de beneficiario real? <primer>`"
+msgstr ":ref:`¿Qué es la titularidad del beneficiario real? <primer>`"
 
 #: ../../index.rst:22 85dfef5cf3824d3ab341ee16465a3b28
 msgid ":ref:`What is the data standard? <whatisbods>`"
@@ -95,16 +95,16 @@ msgstr ""
 
 #: ../../index.rst:43 1b4bc18d796a4789912aaa35c7d666dd
 msgid ":ref:`Key Concepts <key-concepts>`"
-msgstr ":ref:`Key Concepts <key-concepts>`"
+msgstr ":ref:`Conceptos clave <key-concepts>`"
 
 #: ../../index.rst:47 fc9de6820145423f88cc6b492e87f101
 msgid ":ref:`Modelling requirements  <modelling-requirements>`"
-msgstr ":ref:`Modelling requirements  <modelling-requirements>`"
+msgstr ":ref:`Requisitos de modelado  <modelling-requirements>`"
 
 #: ../../index.rst:51 310da8c541ba4a7597ddc9149f955f6b
 msgid ":ref:`Schema browser <schema-browser>`"
-msgstr ":ref:`Schema browser <schema-browser>`"
+msgstr ":ref:`Navegador del esquema <schema-browser>`"
 
 #: ../../index.rst:55 635fe9d295bb42c6b14c5d13413302a2
 msgid ":ref:`System requirements <system-requirements>`"
-msgstr ":ref:`System requirements <system-requirements>`"
+msgstr ":ref:`Requisitos del sistema <system-requirements>`"
