--- a/docs/locale/es/LC_MESSAGES/standard/concepts.po
+++ b/docs/locale/es/LC_MESSAGES/standard/concepts.po
@@ -7,6 +7,7 @@
 # Amy Guy <amy.guy@opendataservices.coop>, 2024
 # Carmen Edery, 2024
 # María Renée Briozzo Mitchell, 2024
+# Rachel Vint, 2024
 # 
 #, fuzzy
 msgid ""
@@ -15,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
-"Last-Translator: María Renée Briozzo Mitchell, 2024\n"
+"Last-Translator: Rachel Vint, 2024\n"
 "Language-Team: Spanish (https://app.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -43,8 +44,8 @@ msgid ""
 "information."
 msgstr ""
 "Se anticipan cambios futuros antes del lanzamiento de la versión 1.0. "
-"Consulte las páginas :ref:`Changelog<changelog>` y `About <../about>`_ para "
-"obtener más información."
+"Consulte las páginas :ref:`Registro de modificaciones<changelog>` y `¿De qué"
+" se trata? <../about>`_ para obtener más información."
 
 #: ../../standard/concepts.rst:8 43e2058798794399add75035598fa4c5
 msgid ""
@@ -123,13 +124,13 @@ msgstr ""
 "Diagrama etiquetado de una red de titularidad del beneficiario real. La "
 "Empresa E está etiquetada como 'Sujeto de la red de titularidad del "
 "beneficiario real'. Una línea continua conectada a la Persona 2 está "
-"etiquetada como  'Relación directa'. El texto 'Participación accionaria del "
-"32%' ubicado sobre esa línea continua está etiquetado como 'Interés. La "
-"Empresa E también está vinculada a la Empresa A con una línea continua. Y la"
-" Empresa A está vinculada a la Persona 1 con una línea continua. Una línea "
-"punteada que conecta a la Empresa E con la Persona 1 está etiquetada como "
-"'Relación indirecta'. El texto 'Participación accionaria del 45%' está "
-"ubicado sobre esa línea punteada. La Persona 1 está etiquetada como  "
+"etiquetada como 'Relación directa'. El texto '32% de participación "
+"accionaria' ubicado sobre esa línea continua está etiquetado como 'Interés. "
+"La Empresa E también está vinculada a la Empresa A con una línea continua. Y"
+" la Empresa A está vinculada a la Persona 1 con una línea continua. Una "
+"línea punteada que conecta a la Empresa E con la Persona 1 está etiquetada "
+"como 'Relación indirecta'. El texto '45% de participación accionaria' está "
+"ubicado sobre esa línea punteada. La Persona 1 está etiquetada como "
 "'Beneficiario real'. La Empresa A está etiquetada como 'Entidad "
 "intermediaria'."
 
@@ -317,15 +318,15 @@ msgstr ""
 "de la persona. Un bloque de declaración sobre relación se ubica junto a la "
 "línea sólida. Un bloque de declaración sobre entidad se ubica junto al nodo "
 "de la entidad. Dentro de la declaración sobre persona, recordType es "
-"'persona', el recordId es 'p24d78ae012f1', y los recordDetails muestran que "
+"'person', el recordId es 'p24d78ae012f1', y los recordDetails muestran que "
 "el nombre de la persona es 'Lev Yotsky'. Dentro de la declaración sobre "
-"relación, el recordType es 'relación' y los recordDetails muestran que la "
-"interestedParty es el registro con el recordId 'p24d78ae012f1' y el sujeto "
-"es el registro con el recordId 'e3f199ad8e312'. Dentro de la declaración "
-"sobre entidad, el recordType es 'entidad', el recordId es 'e3f199ad8e312' y "
-"los recordDetails muestran que la entidad se llama 'White Flag Holdings "
-"Corp'. Estos elementos representan la relación de Lev Yotsky con White Flag "
-"Holdings Corp."
+"relación, el recordType es 'relationship' y los recordDetails muestran que "
+"la interestedParty es el registro con el recordId 'p24d78ae012f1' y el "
+"sujeto es el registro con el recordId 'e3f199ad8e312'. Dentro de la "
+"declaración sobre entidad, el recordType es 'entity', el recordId es "
+"'e3f199ad8e312' y los recordDetails muestran que la entidad se llama 'White "
+"Flag Holdings Corp'. Estos elementos representan la relación de Lev Yotsky "
+"con White Flag Holdings Corp."
 
 #: ../../standard/concepts.rst:79 d13f9a8c36154ff4b31e6b4a74878c5b
 msgid ""
@@ -379,9 +380,9 @@ msgstr ""
 "relación tienen recordId 'r-d67fb1a-aa2f3da' y los recordDetails muestran "
 "que estas declaraciones son sobre un interés de participación accionaria. La"
 " declaración sobre relación más antigua tiene statementDate '2018-07-12' y "
-"recordStatus 'nuevo'. La siguiente tiene statementDate '2019-11-01' y "
-"recordStatus 'actualizado'. Y la declaración sobre relación final tiene "
-"statementDate '2021-02-28' y recordStatus 'cerrado'."
+"recordStatus 'new'. La siguiente tiene statementDate '2019-11-01' y "
+"recordStatus 'updated'. Y la declaración sobre relación final tiene "
+"statementDate '2021-02-28' y recordStatus 'closed'."
 
 #: ../../standard/concepts.rst:93 13d0767050c745ef8cdb109ca16c5952
 msgid ""
@@ -447,10 +448,10 @@ msgid ""
 "the data model in full. Read the :any:`Schema reference <schema-reference>` "
 "for detailed definitions and requirements for each object and field."
 msgstr ""
-"Utilice el :doc:`Schema browser <schema-browser>` para explorar la "
-"estructura del modelo de datos en su totalidad. Consulte la :any:`Schema "
-"reference <schema-reference>` para ver definiciones y requisitos detallados "
-"para cada objeto y campo."
+"Utilice el :doc:`Navegador del esquema <schema-browser>` para explorar la "
+"estructura del modelo de datos en su totalidad. Consulte la :any:`Referencia"
+" del esquema <schema-reference>` para ver definiciones y requisitos "
+"detallados para cada objeto y campo."
 
 #: ../../standard/concepts.rst:113 761f06f84d764ee3b84290245c495fb9
 msgid ""
