--- a/docs/locale/es/LC_MESSAGES/standard/index.po
+++ b/docs/locale/es/LC_MESSAGES/standard/index.po
@@ -5,6 +5,7 @@
 # 
 # Translators:
 # Carmen Edery, 2024
+# María Renée Briozzo Mitchell, 2024
 # 
 #, fuzzy
 msgid ""
@@ -13,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
-"Last-Translator: Carmen Edery, 2024\n"
+"Last-Translator: María Renée Briozzo Mitchell, 2024\n"
 "Language-Team: Spanish (https://app.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -30,9 +31,9 @@ msgid ""
 "This is v0.4 of the Beneficial Ownership Data Standard. It includes updates "
 "to the data model, codelists, and technical guidance."
 msgstr ""
-"Esta es la versión 0.3 del Estándar de datos sobre beneficiarios reales. "
-"Incluye actualizaciones del modelo de datos, listas de códigos y orientación"
-" técnica."
+"Esta es la versión 0.4 del Estándar de datos sobre titularidad del "
+"beneficiario real. Incluye actualizaciones del modelo de datos, listas de "
+"códigos y orientación técnica."
 
 #: ../../standard/warningbox.rst:5 03cfc2fe72804401bf8f97f2d9e66445
 msgid ""
@@ -41,8 +42,8 @@ msgid ""
 "information."
 msgstr ""
 "Se anticipan cambios futuros antes del lanzamiento de la versión 1.0. "
-"Consulte las páginas :ref:`Changelog<changelog>` y `About <../about>`_ para "
-"obtener más información."
+"Consulte las páginas :ref:`Registro de modificaciones<changelog>` y `¿De qué"
+" se trata? <../about>`_ para obtener más información."
 
 #: ../../standard/index.rst:8 4e1c4392abb3427c9bfc9168024862f5
 msgid ""
@@ -51,11 +52,11 @@ msgid ""
 "information. The data model is based on :any:`key concepts <key-concepts>` "
 "relating to this information and its management."
 msgstr ""
-"Los datos del BODS resumen información sobre :doc:`titularidad de "
-"beneficiarios reales <../primer/index>` de vehículos corporativos para "
+"Los datos del BODS resumen información sobre la :doc:`titularidad del "
+"beneficiario real <../primer/index>` de vehículos corporativos para "
 "facilitar el intercambio de información. El modelo de datos se basa en "
-":any:`key concepts <key-concepts>` relacionados con esta información y su "
-"gestión."
+":any:`conceptos clave <key-concepts>` relacionados con esta información y su"
+" gestión."
 
 #: ../../standard/index.rst:10 fa0b59d362ca435e8f2df2b5dc8b2645
 msgid ""
@@ -65,11 +66,12 @@ msgid ""
 ":ref:`Schema reference <schema-reference>` includes an A-Z of objects, "
 "detailing their properties and related codelists."
 msgstr ""
-"El esquema del BODS, definido usando `JSON Schema 2020-12 <https://json-"
-"schema.org/>`_, describe el modelo de datos. El :ref:`Schema browser "
+"El esquema del BODS, definido usando `Esquema JSON 2020-12 <https://json-"
+"schema.org/>`_, describe el modelo de datos. El :ref:`Navegador del esquema "
 "<schema-browser>` muestra cómo los objetos y propiedades del esquema encajan"
-" juntos. El :ref:`Schema reference <schema-reference>` incluye un abecedario"
-" de objetos y detalla sus propiedades y las listas de códigos relacionadas."
+" juntos. La :ref:`Referencia del esquema <schema-reference>` incluye una "
+"lista de objetos ordenados de la A a la Z, y detalla sus propiedades y las "
+"listas de códigos relacionadas."
 
 #: ../../standard/index.rst:12 77c800c5324f4ceb9964d7ae270f59e9
 msgid ""
@@ -77,6 +79,6 @@ msgid ""
 "<modelling-requirements>` and :ref:`System requirements <system-"
 "requirements>` sections."
 msgstr ""
-"En las secciones :ref:`Modelling requirements <modelling-requirements>` y "
-":ref:`System requirements <system-requirements>` se describen los requisitos"
-" adicionales."
+"En las secciones :ref:`Requisitos de modelado <modelling-requirements>` y "
+":ref:`Requisitos del sistema <system-requirements>` se describen los "
+"requisitos adicionales."
