--- a/docs/locale/es/LC_MESSAGES/standard/modelling/languages.po
+++ b/docs/locale/es/LC_MESSAGES/standard/modelling/languages.po
@@ -5,6 +5,7 @@
 # 
 # Translators:
 # Carmen Edery, 2024
+# María Renée Briozzo Mitchell, 2024
 # 
 #, fuzzy
 msgid ""
@@ -13,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
-"Last-Translator: Carmen Edery, 2024\n"
+"Last-Translator: María Renée Briozzo Mitchell, 2024\n"
 "Language-Team: Spanish (https://app.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,7 +24,7 @@ msgstr ""
 
 #: ../../standard/modelling/languages.rst:2 8a42b55124a641859a156f212f26f350
 msgid "Representing alternative languages"
-msgstr "Representando idiomas alternativos"
+msgstr "Representación de idiomas alternativos"
 
 #: ../../standard/modelling/languages.rst:4 a0fe30292611498281cc9335168a0cf8
 msgid ""
@@ -31,7 +32,7 @@ msgid ""
 "languages or scripts. BODS provides options for representing translated or "
 "transliterated information."
 msgstr ""
-"Es posible que la información de titularidad de beneficiarios reales deba "
+"Es posible que la información de titularidad del beneficiario real deba "
 "proporcionarse en diferentes idiomas o scripts. El BODS ofrece opciones para"
 " representar la información traducida o transliterada."
 
@@ -45,7 +46,7 @@ msgid ""
 "‘translation’ or ‘transliteration’"
 msgstr ""
 "los nombres de las personas, utilice una entrada en el arreglo de datos de "
-"nombres con ‘translation’ o ‘transliteration’ de ``name.type``"
+"nombres con ‘traducción’ o ‘transliteración’ como ``name.type``"
 
 #: ../../standard/modelling/languages.rst:10 413423e90b43493f9ce5398af9eec3ae
 msgid "entity names, use an entry in the ``alternativeNames`` array"
@@ -71,7 +72,7 @@ msgstr "En la nota:"
 
 #: ../../standard/modelling/languages.rst:20 dd0d2e55cdbd436fbb60124a4bbcb4cc
 msgid "``motivation`` MUST be ‘transformation’"
-msgstr "``motivation`` DEBE ser ‘transformation’"
+msgstr "``motivation`` DEBE ser ‘transformación’"
 
 #: ../../standard/modelling/languages.rst:22 548ad5151e9e489fb87c89880ad8461b
 msgid ""
