--- a/docs/locale/es/LC_MESSAGES/standard/system/conformance.po
+++ b/docs/locale/es/LC_MESSAGES/standard/system/conformance.po
@@ -6,6 +6,7 @@
 # Translators:
 # Amy Guy <amy.guy@opendataservices.coop>, 2024
 # Carmen Edery, 2024
+# María Renée Briozzo Mitchell, 2024
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
-"Last-Translator: Carmen Edery, 2024\n"
+"Last-Translator: María Renée Briozzo Mitchell, 2024\n"
 "Language-Team: Spanish (https://app.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -43,8 +44,8 @@ msgid ""
 "MAY use terms from outside the schema **only** where the schema's terms are "
 "insufficient"
 msgstr ""
-"PUEDE utilizar términos ajenos a los de este esquema *solo* cuando los "
-"términos del esquema son inadecuados"
+"PUEDE utilizar términos ajenos a los de este esquema **solo** cuando los "
+"términos del esquema son insuficientes"
 
 #: ../../standard/system/conformance.rst:15 f08eb0638e53408189164a845c1f3558
 msgid "MUST use the schema’s terms consistently with their definitions"
@@ -74,7 +75,7 @@ msgstr "Ampliación del esquema"
 
 #: ../../standard/system/conformance.rst:23 6624b59e3d3e483c8b0b255c533e666b
 msgid "If you need to extend the schema:"
-msgstr "Si necesita extender el esquema:"
+msgstr "Si necesita ampliar el esquema:"
 
 #: ../../standard/system/conformance.rst:25 a1d5aeeb2dda46c5b68bf27fc278b8a3
 msgid ""
@@ -117,12 +118,12 @@ msgid ""
 " statement elsewhere in the BODS JSON array. The Data Review Tool can ingest"
 " data serialised as JSON and in tabular form."
 msgstr ""
-"La `Herramienta de revisión de datos del BODS Data "
+"La `Herramienta de revisión de datos del BODS "
 "<https://datareview.openownership.org/>`_ valida la conformidad con el "
 "esquema JSON y con requisitos adicionales que pueden validarse de forma "
-"programática pero no se incluyen en el esquema. Por ejemplo, verifica que "
+"programática, pero no se incluyen en el esquema. Por ejemplo, verifica que "
 "los identificadores de registro en los campos ``subject`` e "
-"``interestedParty`` de las declaraciones sobre relación aparezcan en un "
-"mínimo de una declaración en otro lugar en el arreglo de datos JSON del "
-"BODS. La Herramienta de revisión de datos puede ingerir datos serializados "
-"como JSON y en forma tabular."
+"``interestedParty`` de las declaraciones sobre relación aparezcan en al "
+"menos una declaración en otro lugar en el arreglo de datos JSON del BODS. La"
+" Herramienta de revisión de datos puede ingerir datos serializados como JSON"
+" y en forma tabular."
