--- a/docs/locale/es/LC_MESSAGES/standard/system/index.po
+++ b/docs/locale/es/LC_MESSAGES/standard/system/index.po
@@ -5,6 +5,7 @@
 # 
 # Translators:
 # Carmen Edery, 2024
+# María Renée Briozzo Mitchell, 2024
 # 
 #, fuzzy
 msgid ""
@@ -13,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-10 16:04+0000\n"
 "PO-Revision-Date: 2024-05-10 16:09+0000\n"
-"Last-Translator: Carmen Edery, 2024\n"
+"Last-Translator: María Renée Briozzo Mitchell, 2024\n"
 "Language-Team: Spanish (https://app.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -30,9 +31,9 @@ msgid ""
 "This is v0.4 of the Beneficial Ownership Data Standard. It includes updates "
 "to the data model, codelists, and technical guidance."
 msgstr ""
-"Esta es la versión 0.3 del Estándar de Datos de Beneficiarios Finales. "
-"Incluye actualizaciones del modelo de datos, listas de códigos y orientación"
-" técnica."
+"Esta es la versión 0.4 del Estándar de datos sobre titularidad del "
+"beneficiario real. Incluye actualizaciones del modelo de datos, listas de "
+"códigos y orientación técnica."
 
 #: ../../standard/warningbox.rst:5 1855d7e38c7448bb9e786ab88fdc4948
 msgid ""
@@ -41,8 +42,8 @@ msgid ""
 "information."
 msgstr ""
 "Se anticipan cambios futuros antes del lanzamiento de la versión 1.0. "
-"Consulte las páginas :ref:`Changelog<changelog>` y `About <../about>`_ para "
-"obtener más información."
+"Consulte las páginas :ref:`Registro de modificaciones<changelog>` y `¿De qué"
+" se trata? <../about>`_ para obtener más información."
 
 #: ../../standard/system/index.rst:8 33704f55f3d6439ba794242bb4d86c3a
 msgid ""
@@ -50,4 +51,4 @@ msgid ""
 "ownership data."
 msgstr ""
 "Esta sección contiene requisitos para los sistemas que generan datos sobre "
-"titularidad de beneficiario real."
+"titularidad del beneficiario real."
