--- a/docs/locale/es/LC_MESSAGES/svg.po
+++ b/docs/locale/es/LC_MESSAGES/svg.po
@@ -6,13 +6,14 @@
 # Amy Guy <amy.guy@opendataservices.coop>, 2024
 # Transifex Bot <>, 2024
 # Carmen Edery, 2024
+# María Renée Briozzo Mitchell, 2024
 # 
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 2024-05-10 16:05+0000\n"
 "PO-Revision-Date: 2022-04-05 16:56+0000\n"
-"Last-Translator: Carmen Edery, 2024\n"
+"Last-Translator: María Renée Briozzo Mitchell, 2024\n"
 "Language-Team: Spanish (https://app.transifex.com/OpenDataServices/teams/95583/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -653,7 +654,7 @@ msgstr "está actualizado"
 #: docs/_assets/dates-guidance1.svg:402
 #, no-wrap
 msgid "Company B files updated "
-msgstr "Archivos de la empresa B actualizados"
+msgstr "Archivos de la Empresa B actualizados"
 
 #. (itstool) path: text/tspan
 #: docs/_assets/dates-guidance1.svg:407
@@ -871,7 +872,7 @@ msgstr ""
 #: docs/_assets/key-concepts-img0.svg:346
 #, no-wrap
 msgid "Beneficial ownership network"
-msgstr "Red de beneficiarios reales"
+msgstr "Red de titularidad del beneficiario real"
 
 #. (itstool) path: text/tspan
 #: docs/_assets/key-concepts-img0.svg:360
@@ -889,7 +890,7 @@ msgstr "Entidad intermediaria"
 #: docs/_assets/key-concepts-img0.svg:456
 #, no-wrap
 msgid "Subject of beneficial ownership network"
-msgstr "Sujeto de la red de titularidad de beneficiarios reales"
+msgstr "Sujeto de la red de titularidad del beneficiario real"
 
 #. (itstool) path: text/tspan
 #: docs/_assets/key-concepts-img0.svg:480
@@ -901,7 +902,7 @@ msgstr "Interest"
 #: docs/_assets/key-concepts-img0.svg:981
 #, no-wrap
 msgid "45% shareholding"
-msgstr "Participación accionaria del 45%"
+msgstr "45% de participación accionaria"
 
 #. (itstool) path: text/tspan
 #: docs/_assets/key-concepts-img1.svg:199
